samples/_failures_safe/1761321761_f404e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c655ca5d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_c655ca5d.c:157: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_c655ca5d.c:156:5: error: expected declaration or statement at end of input
  156 |     if
      |     ^~
